--- a/guides/3.hooks.rst
+++ b/guides/3.hooks.rst
@@ -284,7 +284,7 @@ them if needed.
   accessible from within the method itself by using ``$this->``. The instance
   passed with the event isn't very useful in this case.
 
-* ``getResult()`` - returns the resulting (highest) step run code. This returning value
+* ``getResult()`` - returns the resulting (highest) step run code. This returned value
   is one of StepEvent constants: ``4`` when an examples row has failed steps, ``3`` when
   a row has undefined steps, ``2`` when a row has pending steps and ``0`` when all steps
   are passing.
